# gpt-pre-commit

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
src/gpt_pre_commit/: review_code.py
